--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,6 +1,6 @@
 name: Bug report
 description: Create a bug report for Stardust Labs projects
-title: "Bug:"
+title: "[Bug]"
 labels: [bug]
 body:
   - type: markdown
