--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -23,6 +23,8 @@ body:
         - 1.20.3 - 1.20.4
         - 1.20.5 - 1.20.6
         - 1.21 - 1.21.1
+        - 1.21.2 - 1.21.3
+        - 1.21.4
     validations:
       required: true
   - type: input
@@ -41,6 +43,7 @@ body:
         - Datapack
         - Fabric/Quilt Mod
         - Neoforge/Forge Mod
+        - Resourcepack (Sparkles only)
     validations:
       required: true
   - type: textarea
